--- a/refund-policy.html
+++ b/refund-policy.html
@@ -2,46 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Cancellation & Refund Policy – Whis</title>
+  <title>Refund Policy – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
+          colors: { page: '#050505', card: '#0A0A0A' }
+        }
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
-    body { background-color: #050505; color: #cbd5e1; font-family: 'Inter', sans-serif; }
-    h1, h2 { color: white; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
-    p { margin-bottom: 1rem; line-height: 1.6; }
+    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
     .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; }
+    p, li { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
+    strong { color: #e2e8f0; font-weight: 500; }
   </style>
 </head>
-<body>
+<body class="selection:bg-blue-500/30">
+
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
     <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="text-sm font-semibold text-white">whis.ai</a>
+      <a href="index.html" class="flex items-center gap-2">
+        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
+        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
+      </a>
       <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-4xl mx-auto">
-    <h1 class="text-4xl mb-10">Cancellation and Refund Policy</h1>
+  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
+    <div class="mb-12 border-b border-white/5 pb-8">
+        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Cancellation & Refund Policy</h1>
+        <p class="text-slate-500 text-sm">Ensuring your satisfaction.</p>
+    </div>
 
-    <h2>Cancellation Policy</h2>
-    <p>You may cancel your Whis Pro or Stealth subscription at any time via your User Profile page or by contacting support. Upon cancellation, your subscription will remain active until the end of the current billing period. No further charges will be applied after cancellation.</p>
+    <div>
+        <h2>Cancellation Policy</h2>
+        <p>You may cancel your Whis Pro or Stealth subscription at any time via your User Profile page or by contacting support. Upon cancellation:</p>
+        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
+            <li>Your access will remain active until the end of the current billing cycle.</li>
+            <li>No further charges will be applied to your payment method.</li>
+            <li>You will be downgraded to the Free tier automatically after the period expires.</li>
+        </ul>
 
-    <h2>Refund Policy</h2>
-    <p>Since Whis offers a digital service with immediate access to features:</p>
-    <ul class="list-disc pl-5 space-y-2 mb-4">
-        <li><strong>Monthly Subscriptions:</strong> Generally non-refundable. However, if you believe you were charged in error or faced technical issues that prevented you from using the service, please contact us within 48 hours of the charge.</li>
-        <li><strong>Duplicate Charges:</strong> In the event of a billing error resulting in a duplicate charge, a full refund for the duplicate amount will be processed immediately.</li>
-    </ul>
+        <h2>Refund Policy</h2>
+        <p>As Whis is a digital product offering immediate access to premium features, we generally do not offer refunds for partial use of a billing period. However:</p>
+        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
+            <li><strong>Technical Issues:</strong> If you are unable to use the software due to a technical defect that our support team cannot resolve within 48 hours, a full refund will be issued.</li>
+            <li><strong>Billing Errors:</strong> Duplicate charges or charges made after a confirmed cancellation will be refunded immediately.</li>
+        </ul>
 
-    <h2>Processing Timeline</h2>
-    <p> approved refunds are typically processed within 5-7 business days and credited back to the original method of payment.</p>
+        <h2>Processing Timeline</h2>
+        <p>Approved refunds are processed within 5-7 business days and credited back to the original source of payment.</p>
 
-    <h2>Contact Us</h2>
-    <p>If you have any questions about our Refunds & Cancellation Policy, please contact us at support@whis-ai.com.</p>
+        <h2>Contact</h2>
+        <p>For billing disputes, please email <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a> with your Order ID.</p>
+    </div>
   </main>
-
-  <footer class="border-t border-white/5 py-8 text-center text-xs text-slate-600">
+  
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
       &copy; 2025 Whis AI. All rights reserved.
   </footer>
 </body>
