--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -2,43 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Shipping & Delivery Policy – Whis</title>
+  <title>Shipping Policy – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
+          colors: { page: '#050505', card: '#0A0A0A' }
+        }
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
-    body { background-color: #050505; color: #cbd5e1; font-family: 'Inter', sans-serif; }
-    h1, h2 { color: white; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
-    p { margin-bottom: 1rem; line-height: 1.6; }
+    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
     .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; }
+    p { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
+    strong { color: #e2e8f0; font-weight: 500; }
   </style>
 </head>
-<body>
+<body class="selection:bg-blue-500/30">
+
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
     <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="text-sm font-semibold text-white">whis.ai</a>
+      <a href="index.html" class="flex items-center gap-2">
+        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
+        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
+      </a>
       <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-4xl mx-auto">
-    <h1 class="text-4xl mb-10">Shipping and Delivery Policy</h1>
+  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
+    <div class="mb-12 border-b border-white/5 pb-8">
+        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Shipping & Delivery Policy</h1>
+        <p class="text-slate-500 text-sm">Digital Access Information.</p>
+    </div>
 
-    <h2>Digital Delivery Only</h2>
-    <p>Whis is a software-as-a-service (SaaS) and desktop application provider. We do not sell physical products; therefore, no physical shipping is involved.</p>
+    <div>
+        <h2>Digital Delivery</h2>
+        <p>Whis is a Software-as-a-Service (SaaS) provider. We do not sell or ship physical products. All services are delivered digitally via the internet.</p>
 
-    <h2>Delivery Timeline</h2>
-    <p><strong>Instant Access:</strong> Upon successful payment for a Pro or Stealth plan, your account is automatically upgraded. You will receive immediate access to the premium features within the application.</p>
-    <p><strong>Timeline:</strong> The activation is typically instant (0-15 minutes). In rare cases of network delays, it may take up to 24 hours.</p>
+        <h2>Delivery Timeline</h2>
+        <p><strong>Instant Access:</strong> Upon successful payment for a Pro or Stealth plan, your account is automatically upgraded. You will receive immediate access to the premium features within the application.</p>
+        <p><strong>Timeline:</strong> Account activation is typically instant (0-15 minutes). In rare cases of network delays or payment processing verification, it may take up to 24 hours.</p>
 
-    <h2>Confirmation</h2>
-    <p>You will receive a payment confirmation email and a license activation notice at your registered email address immediately upon purchase.</p>
+        <h2>Confirmation</h2>
+        <p>You will receive a payment confirmation email from our payment partner and a license activation notice from Whis at your registered email address immediately upon purchase.</p>
 
-    <h2>Issues with Access</h2>
-    <p>If you have paid but do not have access to premium features after 1 hour, please contact our support team at support@whis-ai.com with your Order ID.</p>
+        <h2>Access Issues</h2>
+        <p>If you have successfully paid but do not have access to premium features after 1 hour, please contact our support team at <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a> with your Order ID.</p>
+    </div>
   </main>
-
-  <footer class="border-t border-white/5 py-8 text-center text-xs text-slate-600">
+  
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
       &copy; 2025 Whis AI. All rights reserved.
   </footer>
 </body>
