--- a/privacy.html
+++ b/privacy.html
@@ -5,71 +5,66 @@
   <title>Privacy Policy – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
-          colors: { page: '#050505', card: '#0A0A0A', stroke: '#1F1F1F' }
-        }
-      }
-    }
-  </script>
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505'},backgroundImage:{'grid-pattern':'linear-gradient(to right, #202020 1px, transparent 1px), linear-gradient(to bottom, #202020 1px, transparent 1px)'}}}}</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>
-    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
-    .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; letter-spacing: -0.01em; }
-    p, li { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
-    strong { color: #e2e8f0; font-weight: 500; }
-  </style>
+  <style>body{background-color:#050505;color:white;}.glass-nav{background:rgba(5,5,5,0.7);backdrop-filter:blur(20px);border-bottom:1px solid rgba(255,255,255,0.05);}.bg-grid{background-size:40px 40px;mask-image:radial-gradient(circle at center, black, transparent 80%);opacity:0.1;}</style>
 </head>
-<body class="selection:bg-blue-500/30">
-
+<body class="min-h-screen relative selection:bg-blue-500/30">
+  <div class="fixed inset-0 bg-grid bg-grid-pattern pointer-events-none"></div>
+  
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
-    <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2">
-        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
-        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
-      </a>
-      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
+    <div class="w-full max-w-5xl px-6 flex items-center justify-between">
+      <a href="index.html" class="text-sm font-bold tracking-widest text-white">WHIS.AI</a>
+      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Close</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
-    <div class="mb-12 border-b border-white/5 pb-8">
-        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Privacy Policy</h1>
-        <p class="text-slate-500 text-sm">Last updated: November 25, 2025</p>
-    </div>
+  <main class="pt-32 pb-24 px-6 relative z-10">
+    <div class="max-w-3xl mx-auto">
+        <div class="mb-12 border-b border-white/10 pb-8">
+            <h1 class="text-4xl font-medium mb-3 text-white">Privacy Policy</h1>
+            <p class="text-slate-500 text-sm">Last updated: November 25, 2025</p>
+        </div>
 
-    <div>
-        <p>Welcome to Whis ("we," "our," or "us"). We are committed to protecting your privacy and ensuring you understand how your information is used. This Privacy Policy explains how we collect, use, and share information when you use our desktop application and services.</p>
+        <div class="space-y-12 text-slate-400 font-light leading-relaxed">
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">1. Introduction</h2>
+                <p>Welcome to Whis ("we," "our," or "us"). We are committed to protecting your privacy. This policy outlines how we handle your data when you use our desktop application and services.</p>
+            </section>
 
-        <h2>1. Information We Collect</h2>
-        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
-            <li><strong>Google User Data:</strong> We use Google OAuth for authentication. We collect your email address, name, and profile picture strictly to manage your user account.</li>
-            <li><strong>Audio & Visual Data:</strong> To provide our core service, the Application processes system audio and screen captures. This data is processed in real-time to generate responses and is not stored permanently on our servers.</li>
-            <li><strong>Payment Information:</strong> Payments are processed by third-party gateways (Razorpay/Cashfree). We do not store your full credit card details.</li>
-        </ul>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">2. Data Collection</h2>
+                <div class="bg-white/5 border border-white/5 rounded-xl p-6 space-y-4">
+                    <div class="flex gap-4">
+                        <div class="text-blue-400 mt-1"><i class="fa-solid fa-user-shield"></i></div>
+                        <div><strong class="text-white block text-sm mb-1">Identity Data</strong>We collect your name, email, and Google profile picture solely for authentication purposes via OAuth.</div>
+                    </div>
+                    <div class="flex gap-4">
+                        <div class="text-blue-400 mt-1"><i class="fa-solid fa-microphone-lines"></i></div>
+                        <div><strong class="text-white block text-sm mb-1">Ephemeral Processing</strong>Audio and screen data is processed in real-time to generate responses. This data is transient and is not permanently stored on our servers.</div>
+                    </div>
+                </div>
+            </section>
 
-        <h2>2. How We Use Your Information</h2>
-        <p>We use your information strictly to:</p>
-        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
-           <li>Authenticate your identity and manage your subscription tier.</li>
-           <li>Provide the real-time transcription and AI assistance features.</li>
-           <li>Send transactional emails (invoices, password resets).</li>
-        </ul>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">3. Data Usage</h2>
+                <p>We use your data strictly to:</p>
+                <ul class="list-disc pl-5 space-y-2 mt-2">
+                    <li>Provide the AI transcription and assistant service.</li>
+                    <li>Process subscription payments via secure gateways.</li>
+                    <li>Send critical service updates (security alerts, invoices).</li>
+                </ul>
+            </section>
 
-        <h2>3. Data Security</h2>
-        <p>We implement industry-standard encryption (TLS/SSL) for data in transit. Your audio streams and screenshots are processed ephemerally. We do not use your personal meeting data to train public AI models without your explicit consent.</p>
-
-        <h2>4. Contact Us</h2>
-        <p>If you have questions about this Privacy Policy, please contact us at <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a>.</p>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">4. Contact</h2>
+                <p>Questions regarding this policy? Contact us at <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a>.</p>
+            </section>
+        </div>
     </div>
   </main>
   
-  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
-      &copy; 2025 Whis AI. All rights reserved.
-  </footer>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600 relative z-10">&copy; 2025 Whis AI.</footer>
 </body>
 </html>
