--- a/refund-policy.html
+++ b/refund-policy.html
@@ -2,72 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Refund Policy – Whis</title>
+  <title>Refunds – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
-          colors: { page: '#050505', card: '#0A0A0A' }
-        }
-      }
-    }
-  </script>
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505'},backgroundImage:{'grid-pattern':'linear-gradient(to right, #202020 1px, transparent 1px), linear-gradient(to bottom, #202020 1px, transparent 1px)'}}}}</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>
-    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
-    .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; }
-    p, li { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
-    strong { color: #e2e8f0; font-weight: 500; }
-  </style>
+  <style>body{background-color:#050505;color:white;}.glass-nav{background:rgba(5,5,5,0.7);backdrop-filter:blur(20px);border-bottom:1px solid rgba(255,255,255,0.05);}.bg-grid{background-size:40px 40px;mask-image:radial-gradient(circle at center, black, transparent 80%);opacity:0.1;}</style>
 </head>
-<body class="selection:bg-blue-500/30">
-
+<body class="min-h-screen relative selection:bg-blue-500/30">
+  <div class="fixed inset-0 bg-grid bg-grid-pattern pointer-events-none"></div>
+  
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
-    <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2">
-        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
-        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
-      </a>
-      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
+    <div class="w-full max-w-5xl px-6 flex items-center justify-between">
+      <a href="index.html" class="text-sm font-bold tracking-widest text-white">WHIS.AI</a>
+      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Close</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
-    <div class="mb-12 border-b border-white/5 pb-8">
-        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Cancellation & Refund Policy</h1>
-        <p class="text-slate-500 text-sm">Ensuring your satisfaction.</p>
-    </div>
+  <main class="pt-32 pb-24 px-6 relative z-10">
+    <div class="max-w-3xl mx-auto">
+        <div class="mb-12 border-b border-white/10 pb-8">
+            <h1 class="text-4xl font-medium mb-3 text-white">Cancellation & Refunds</h1>
+            <p class="text-slate-500 text-sm">Transparent policies for your peace of mind.</p>
+        </div>
 
-    <div>
-        <h2>Cancellation Policy</h2>
-        <p>You may cancel your Whis Pro or Stealth subscription at any time via your User Profile page or by contacting support. Upon cancellation:</p>
-        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
-            <li>Your access will remain active until the end of the current billing cycle.</li>
-            <li>No further charges will be applied to your payment method.</li>
-            <li>You will be downgraded to the Free tier automatically after the period expires.</li>
-        </ul>
+        <div class="space-y-12 text-slate-400 font-light leading-relaxed">
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">Cancellation Policy</h2>
+                <div class="bg-white/5 border border-white/5 rounded-xl p-6">
+                    <p class="mb-4 text-sm">You can cancel your subscription instantly via your User Profile. Upon cancellation:</p>
+                    <ul class="list-disc pl-5 space-y-2 text-sm">
+                        <li>Your premium access continues until the end of the current billing cycle.</li>
+                        <li>No future charges will be applied.</li>
+                    </ul>
+                </div>
+            </section>
 
-        <h2>Refund Policy</h2>
-        <p>As Whis is a digital product offering immediate access to premium features, we generally do not offer refunds for partial use of a billing period. However:</p>
-        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
-            <li><strong>Technical Issues:</strong> If you are unable to use the software due to a technical defect that our support team cannot resolve within 48 hours, a full refund will be issued.</li>
-            <li><strong>Billing Errors:</strong> Duplicate charges or charges made after a confirmed cancellation will be refunded immediately.</li>
-        </ul>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">Refund Eligibility</h2>
+                <p>Since Whis offers immediate digital access, refunds are generally not provided for partial periods. However, we guarantee refunds in the following cases:</p>
+                <ul class="list-disc pl-5 space-y-2 mt-4">
+                    <li><strong class="text-white font-normal">Technical Failures:</strong> If the software fails to work on your device and our support team cannot fix it within 48 hours.</li>
+                    <li><strong class="text-white font-normal">Billing Errors:</strong> Duplicate charges or charges after a confirmed cancellation.</li>
+                </ul>
+            </section>
 
-        <h2>Processing Timeline</h2>
-        <p>Approved refunds are processed within 5-7 business days and credited back to the original source of payment.</p>
-
-        <h2>Contact</h2>
-        <p>For billing disputes, please email <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a> with your Order ID.</p>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">Processing Time</h2>
+                <p>Refunds are processed within 5-7 business days and credited back to the original payment method.</p>
+            </section>
+        </div>
     </div>
   </main>
   
-  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
-      &copy; 2025 Whis AI. All rights reserved.
-  </footer>
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600 relative z-10">&copy; 2025 Whis AI.</footer>
 </body>
 </html>
