--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -2,64 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Shipping Policy – Whis</title>
+  <title>Delivery – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
-          colors: { page: '#050505', card: '#0A0A0A' }
-        }
-      }
-    }
-  </script>
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505'},backgroundImage:{'grid-pattern':'linear-gradient(to right, #202020 1px, transparent 1px), linear-gradient(to bottom, #202020 1px, transparent 1px)'}}}}</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <style>
-    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
-    .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; }
-    p { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
-    strong { color: #e2e8f0; font-weight: 500; }
-  </style>
+  <style>body{background-color:#050505;color:white;}.glass-nav{background:rgba(5,5,5,0.7);backdrop-filter:blur(20px);border-bottom:1px solid rgba(255,255,255,0.05);}.bg-grid{background-size:40px 40px;mask-image:radial-gradient(circle at center, black, transparent 80%);opacity:0.1;}</style>
 </head>
-<body class="selection:bg-blue-500/30">
-
+<body class="min-h-screen relative selection:bg-blue-500/30">
+  <div class="fixed inset-0 bg-grid bg-grid-pattern pointer-events-none"></div>
+  
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
-    <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2">
-        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
-        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
-      </a>
-      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
+    <div class="w-full max-w-5xl px-6 flex items-center justify-between">
+      <a href="index.html" class="text-sm font-bold tracking-widest text-white">WHIS.AI</a>
+      <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Close</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
-    <div class="mb-12 border-b border-white/5 pb-8">
-        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Shipping & Delivery Policy</h1>
-        <p class="text-slate-500 text-sm">Digital Access Information.</p>
-    </div>
+  <main class="pt-32 pb-24 px-6 relative z-10">
+    <div class="max-w-3xl mx-auto">
+        <div class="mb-12 border-b border-white/10 pb-8">
+            <h1 class="text-4xl font-medium mb-3 text-white">Shipping & Delivery</h1>
+            <p class="text-slate-500 text-sm">Digital Access Policy.</p>
+        </div>
 
-    <div>
-        <h2>Digital Delivery</h2>
-        <p>Whis is a Software-as-a-Service (SaaS) provider. We do not sell or ship physical products. All services are delivered digitally via the internet.</p>
+        <div class="space-y-12 text-slate-400 font-light leading-relaxed">
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">1. Digital Delivery Only</h2>
+                <p>Whis is a Software-as-a-Service (SaaS) product. We do not sell or ship physical goods. All access is delivered electronically via the internet.</p>
+            </section>
 
-        <h2>Delivery Timeline</h2>
-        <p><strong>Instant Access:</strong> Upon successful payment for a Pro or Stealth plan, your account is automatically upgraded. You will receive immediate access to the premium features within the application.</p>
-        <p><strong>Timeline:</strong> Account activation is typically instant (0-15 minutes). In rare cases of network delays or payment processing verification, it may take up to 24 hours.</p>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">2. Activation Timeline</h2>
+                <div class="grid md:grid-cols-2 gap-4">
+                    <div class="bg-white/5 border border-white/5 rounded-xl p-5">
+                        <strong class="text-white block text-sm mb-1">Instant Access</strong>
+                        <p class="text-xs">Typically, your account is upgraded to Pro/Stealth immediately (0-15 mins) after successful payment.</p>
+                    </div>
+                    <div class="bg-white/5 border border-white/5 rounded-xl p-5">
+                        <strong class="text-white block text-sm mb-1">Max Delay</strong>
+                        <p class="text-xs">In rare cases of network or payment verification delays, activation may take up to 24 hours.</p>
+                    </div>
+                </div>
+            </section>
 
-        <h2>Confirmation</h2>
-        <p>You will receive a payment confirmation email from our payment partner and a license activation notice from Whis at your registered email address immediately upon purchase.</p>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">3. Confirmation</h2>
+                <p>Upon purchase, you will receive two emails:</p>
+                <ul class="list-disc pl-5 space-y-2 mt-2">
+                    <li>A payment receipt from our payment partner.</li>
+                    <li>An account activation confirmation from Whis.</li>
+                </ul>
+            </section>
 
-        <h2>Access Issues</h2>
-        <p>If you have successfully paid but do not have access to premium features after 1 hour, please contact our support team at <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a> with your Order ID.</p>
+            <section>
+                <h2 class="text-xl font-medium text-white mb-4">4. Support</h2>
+                <p>If you do not receive access within 1 hour of payment, please email <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a>.</p>
+            </section>
+        </div>
     </div>
   </main>
   
-  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
-      &copy; 2025 Whis AI. All rights reserved.
-  </footer>
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600 relative z-10">&copy; 2025 Whis AI.</footer>
 </body>
 </html>
