--- a/payment.html
+++ b/payment.html
@@ -20,14 +20,14 @@
         <div class="w-20 h-20 bg-green-100 text-green-500 rounded-full flex items-center justify-center mx-auto mb-6"><i class="fa-solid fa-check text-4xl"></i></div>
         <h2 class="text-3xl font-bold text-slate-900 mb-4">You're all set!</h2>
         <p class="text-slate-600 mb-8">Your account has been upgraded successfully.</p>
-        <a href="index.html" class="block w-full bg-blue-600 text-white py-3 rounded-xl font-bold hover:bg-blue-700 transition">Go to Dashboard</a>
+        <a href="/" class="block w-full bg-blue-600 text-white py-3 rounded-xl font-bold hover:bg-blue-700 transition">Go to Dashboard</a>
     </div>
 
     <div id="failure" class="hidden py-6">
         <div class="w-20 h-20 bg-red-100 text-red-500 rounded-full flex items-center justify-center mx-auto mb-6"><i class="fa-solid fa-times text-4xl"></i></div>
         <h2 class="text-2xl font-bold text-slate-900 mb-2">Payment Failed</h2>
-        <p class="text-slate-500 mb-8">We couldn't confirm your transaction signature.</p>
-        <a href="pricing.html" class="block w-full bg-slate-100 text-slate-700 py-3 rounded-xl font-bold hover:bg-slate-200 transition">Try Again</a>
+        <p class="text-slate-500 mb-8">We couldn't confirm your transaction.</p>
+        <a href="/pricing" class="block w-full bg-slate-100 text-slate-700 py-3 rounded-xl font-bold hover:bg-slate-200 transition">Try Again</a>
     </div>
 
   </div>
