--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-500">
         <a href="#how-it-works" class="hover:text-white transition">How it Works</a>
         <a href="#comparison" class="hover:text-white transition">Compare Plans</a>
-        <a href="pricing.html" class="hover:text-white transition">Pricing</a>
+        <a href="/pricing" class="hover:text-white transition">Pricing</a>
       </div>
       <div class="flex items-center gap-4">
         <div id="userSection" class="flex items-center gap-3">
@@ -95,7 +95,7 @@
       </p>
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
         <button id="smartDownloadBtn" class="px-8 py-3.5 bg-blue-600 hover:bg-blue-500 text-white rounded-lg font-medium transition flex items-center gap-2 text-sm"><i id="osIcon" class="fa-brands fa-apple"></i> <span id="osText">Download for macOS</span></button>
-        <a href="pricing.html" class="px-8 py-3.5 bg-white/5 hover:bg-white/10 text-white border border-white/10 rounded-lg font-medium transition text-sm">View Plans</a>
+        <a href="/pricing" class="px-8 py-3.5 bg-white/5 hover:bg-white/10 text-white border border-white/10 rounded-lg font-medium transition text-sm">View Plans</a>
       </div>
       <p id="osSubtext" class="mt-3 text-[10px] text-slate-600">Apple Silicon & Intel Supported</p>
     </div>
@@ -210,7 +210,7 @@
               </table>
           </div>
           <div class="mt-10 text-center">
-              <a href="pricing.html" class="px-8 py-3 bg-white text-black rounded-lg font-bold hover:bg-slate-200 transition">View Full Pricing</a>
+              <a href="/pricing" class="px-8 py-3 bg-white text-black rounded-lg font-bold hover:bg-slate-200 transition">View Full Pricing</a>
           </div>
       </div>
   </section>
@@ -220,12 +220,12 @@
           <div class="flex flex-col md:flex-row justify-between items-center gap-6">
               <div class="text-xs text-slate-600">&copy; 2025 Whis AI.</div>
               <div class="flex flex-wrap gap-6 text-xs text-slate-500 justify-center">
-                  <a href="pricing.html" class="hover:text-white transition">Pricing</a>
-                  <a href="contact.html" class="hover:text-white transition">Contact Us</a>
-                  <a href="terms.html" class="hover:text-white transition">Terms & Conditions</a>
-                  <a href="privacy.html" class="hover:text-white transition">Privacy Policy</a>
-                  <a href="refund-policy.html" class="hover:text-white transition">Refunds</a>
-                  <a href="shipping-policy.html" class="hover:text-white transition">Delivery Policy</a>
+                  <a href="/pricing" class="hover:text-white transition">Pricing</a>
+                  <a href="/contact" class="hover:text-white transition">Contact Us</a>
+                  <a href="/terms" class="hover:text-white transition">Terms & Conditions</a>
+                  <a href="/privacy" class="hover:text-white transition">Privacy Policy</a>
+                  <a href="/refund-policy" class="hover:text-white transition">Refunds</a>
+                  <a href="/shipping-policy" class="hover:text-white transition">Delivery Policy</a>
               </div>
           </div>
       </div>
@@ -244,7 +244,7 @@
                             <tr>
                                 <th class="p-2">Date</th>
                                 <th class="p-2">Plan</th>
-                                <th class="p-2">Status</th> <!-- Added Status Column -->
+                                <th class="p-2">Status</th>
                                 <th class="p-2 text-right">Amt</th>
                             </tr>
                         </thead>
@@ -280,7 +280,6 @@
     
     function openProfileModal(){
         if(currentUser) {
-            // FIX: Explicitly set the avatar and name in the modal when opening
             const modalAvatar = document.getElementById('modalUserAvatar');
             if(modalAvatar) modalAvatar.src = currentUser.avatarUrl;
             document.getElementById('modalUserName').innerText = currentUser.name;
@@ -314,7 +313,6 @@
             if(d.orders && d.orders.length > 0) { 
                 document.getElementById('noPaymentsMsg').classList.add('hidden'); 
                 d.orders.forEach(o=>{ 
-                    // FIX: Add Status Logic
                     const isPaid = o.status === 'paid' || o.status === 'PAID';
                     const statusColor = isPaid ? 'text-emerald-400 bg-emerald-500/10 border-emerald-500/20' : 'text-red-400 bg-red-500/10 border-red-500/20';
                     const statusText = isPaid ? 'PAID' : 'FAILED';
